# centralize

./: README.md  centralize-intro.html  marketplace-tester.html
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: routes.rs
backend/src/api/handlers/: marketplace.rs
backend/src/db/: db.rs
backend/src/models/: mod.rs  ticket_model.rs
backend/src/solana/: solana.rs
infrastructure/: makefile
infrastructure/dev/: .env.example  README.md  certs.txt  commands-postgresql.txt  docker-compose.dev.yml  docker-compose.solana.dev.yml  docs.txt  init.sql  solana_commands.txt  wallet.txt
program/: Anchor.toml  Cargo.toml  README.md
program/programs/centralize/: Cargo.toml
program/programs/centralize/src/: errors.rs  lib.rs
program/programs/centralize/src/instructions/: auditoria.rs  calificacion.rs  empresa.rs  initialize.rs  membresia.rs  mod.rs  proveedor.rs  solicitud.rs
program/programs/centralize/src/state/: auditoria.rs  calificacion.rs  empresa.rs  membresia.rs  mod.rs  platform.rs  proveedor.rs  solicitud.rs
