[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP server
axum       = { version = "0.7", features = ["json"] }
tokio      = { version = "1",   features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
 
# Serialización
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
 
# Utilidades
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
rand       = "0.8"
hex        = "0.4"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
# Solana — mismo nivel que @solana/web3.js
solana-client = "1.18"

solana-sdk    = "1.18"
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.17"

borsh = "1.0"
sha2  = "0.10"

 

